Technical training week without solutions

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -2,7 +2,7 @@
 #
 
 # You can set these variables from the command line.
-SPHINXOPTS    = -q -t solutions
+SPHINXOPTS    = -q
 SPHINXBUILD   = sphinx-build2
 PAPER         = a4
 BUILDDIR      = _build
