--- a/addons/account/demo/account_invoice_demo.yml
+++ b/addons/account/demo/account_invoice_demo.yml
@@ -66,7 +66,7 @@
     date_invoice: !eval time.strftime('%Y-%m')+'-08'
 -
   !python {model: account.invoice.line} : |
-      account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('data_account_type_fixed_assets'))])
+      account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_fixed_assets'))])
       line_vals = {
           'invoice_id': ref('demo_invoice_invest_sale'),
           'name': "Land located at '50.635336,4.863298'",
@@ -74,7 +74,7 @@
       }
       if account_id:
           line_vals['account_id'] = account_id[0]
-      self.create(cr, uid, line_vals)
+          self.create(cr, uid, line_vals)
 -
   !workflow {model: account.invoice, action: invoice_open, ref: demo_invoice_invest_sale}
 -
@@ -89,7 +89,7 @@
     currency_id: base.EUR
     user_id: base.user_demo
     reference_type: none
-    payment_term: account.account_payment_term
+    payment_term: account_payment_term
     type: 'in_invoice'
     date_invoice: !eval time.strftime('%Y')+'-01-01'
     invoice_line:
@@ -112,15 +112,19 @@
     date_invoice: !eval time.strftime('%Y')+'-01-01'
 -
   !python {model: account.invoice.line} : |
-      account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_overheads')), ('tag_ids', 'in', [ref('account.account_tag_operating')])])
       line_vals = {
           'invoice_id': ref('demo_invoice_january_wages'),
           'name': "CEO wages",
           'price_unit': 10000,
       }
+      account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_overheads')), ('tag_ids', 'in', [ref('account.account_tag_operating')])])
+      if not account_id:
+          account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_overheads'))])
+      if not account_id:
+          account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_expenses'))])
       if account_id:
           line_vals['account_id'] = account_id[0]
-      self.create(cr, uid, line_vals)
+          self.create(cr, uid, line_vals)
 -
   !workflow {model: account.invoice, action: invoice_open, ref: demo_invoice_january_wages}
 -
@@ -132,7 +136,7 @@
     date_invoice: !eval time.strftime('%Y')+'-01-15'
 -
   !python {model: ir.model.data} : |
-      account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('data_account_type_fixed_assets'))])
+      account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_fixed_assets'))])
       line_vals = {
           'invoice_id': ref('demo_invoice_equipment_purchase'),
           'name': "Coffee Machine with huge 'employee\'s performances boosting perk'",
@@ -140,12 +144,12 @@
       }
       if account_id:
           line_vals['account_id'] = account_id[0]
-      self._update(cr, uid, 'account.invoice.line', 'account', line_vals, 'coffee_machine_line')
+          self._update(cr, uid, 'account.invoice.line', 'account', line_vals, 'coffee_machine_line')
 -
   !workflow {model: account.invoice, action: invoice_open, ref: demo_invoice_equipment_purchase}
 -
   !python {model: account.bank.statement.line} : |
-      account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('data_account_type_revenue')), ('tag_ids', 'in', [ref('account_tag_financing')])])
+      account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_revenue')), ('tag_ids', 'in', [ref('account.account_tag_financing')])])
       line = self.browse(cr, uid, ref('demo_bank_statement_line_5'))
       if not line.journal_entry_ids and account_ids:
           line.write({'account_id': account_ids[0]})
