--- a/addons/account/demo/account_invoice_demo.yml
+++ b/addons/account/demo/account_invoice_demo.yml
@@ -152,11 +152,15 @@
           line.write({'account_id': account_ids[0]})
           line.fast_counterpart_creation()
 -
-  !record {model: account.move, id: demo_opening_move}:
-    company_id: base.main_company
-    journal_id: miscellaneous_journal 
-    date: !eval time.strftime('%Y')+'-01-01'
-    ref: 'Company Creation'
+  !python {model: ir.model.data} : |
+      import time
+      vals = {
+          'company_id': ref('base.main_company'),
+          'journal_id': self.pool.get('account.journal').search(cr, uid, [('type', '=', 'general')])[0],
+          'date': time.strftime('%Y')+'-01-01',
+          'ref': 'Company Creation',
+      }
+      self._update(cr, uid, 'account.move', 'account', vals, 'demo_opening_move')
 -
   !python {model: ir.model.data} : |
       bank_journal_id = self.pool.get('account.journal').search(cr, uid, [('name', '=', 'Bank Bank Account (test)')])[0]
@@ -165,17 +169,17 @@
       equity_account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_equity')), ('tag_ids', 'in', [ref('demo_capital_account')])])
       if bank_account_id and fixed_asset_account_ids and equity_account_ids:
           self._update(cr, uid, 'account.move.line', 'account', {
-              'move_id': ref('demo_opening_move'),
+              'move_id': ref('account.demo_opening_move'),
               'name': 'Opening Entry',
               'debit': 5103,
               'account_id': bank_account_id}, 'opening_line_1', context={'check_move_validity': False})
           self._update(cr, uid, 'account.move.line', 'account', {
-              'move_id': ref('demo_opening_move'),
+              'move_id': ref('account.demo_opening_move'),
               'name': 'Opening Entry',
               'debit': 13447,
               'account_id': fixed_asset_account_ids[0]}, 'opening_line_2', context={'check_move_validity': False})
           self._update(cr, uid, 'account.move.line', 'account', {
-              'move_id': ref('demo_opening_move'),
+              'move_id': ref('account.demo_opening_move'),
               'name': 'Opening Entry',
               'credit': 18550,
               'account_id': equity_account_ids[0]}, 'opening_line_3', context={'check_move_validity': False})
