--- a/addons/membership/membership_demo.yml
+++ b/addons/membership/membership_demo.yml
@@ -2,10 +2,26 @@
   create invoice and state is 'open' and pay some invoice
 -
   !python {model: res.partner}: |
-    import time
-    invoice_ids = self.create_membership_invoice(cr, uid, [ref("base.res_partner_1"),ref("base.res_partner_14"),ref("base.res_partner_24"),ref("base.res_partner_19"),ref("base.res_partner_8"),ref("base.res_partner_5"),ref("base.res_partner_21"),ref("base.res_partner_6"),ref("base.res_partner_16"),ref("base.res_partner_10")], product_id=ref("membership_1"), datas={"amount":80.00})
-    invoice_pool = self.pool.get('account.invoice')
-    invoice_pool.signal_workflow(cr, uid, invoice_ids, 'invoice_open')
+    if self.pool.get('account.invoice')._default_currency(cr, uid):
+        import time
+        invoice_ids = self.create_membership_invoice(cr, uid, [ref("base.res_partner_1"),ref("base.res_partner_14"),ref("base.res_partner_24"),ref("base.res_partner_19"),ref("base.res_partner_8"),ref("base.res_partner_5"),ref("base.res_partner_21"),ref("base.res_partner_6"),ref("base.res_partner_16"),ref("base.res_partner_10")], product_id=ref("membership_1"), datas={"amount":80.00})
+        invoice_pool = self.pool.get('account.invoice')
+        invoice_pool.signal_workflow(cr, uid, invoice_ids, 'invoice_open')
 
-    for id in invoice_ids[-4:]:
-        pay = invoice_pool.pay_and_reconcile(cr, uid, [id], ref('account.bank_journal'), 9050.0)
+        for id in invoice_ids[-4:]:
+            pay = invoice_pool.pay_and_reconcile(cr, uid, [id], ref('account.bank_journal'), 9050.0)
+
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_2'), ref('membership_0'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_10'), ref('membership_0'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_12'), ref('membership_0'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_13'), ref('membership_0'), {'amount':180})
+
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_18'), ref('membership_1'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_21'), ref('membership_1'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_22'), ref('membership_1'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_23'), ref('membership_1'), {'amount':180})
+
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_9'), ref('membership_2'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_11'), ref('membership_2'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_5'), ref('membership_2'), {'amount':180})
+        self.create_membership_invoice(cr, uid, ref('base.res_partner_3'), ref('membership_2'), {'amount':180})
