--- a/addons/account/demo/account_invoice_demo.yml
+++ b/addons/account/demo/account_invoice_demo.yml
@@ -88,7 +88,7 @@
     currency_id: base.EUR
     user_id: base.user_demo
     reference_type: none
-    payment_term: account_payment_term
+    payment_term: account.account_payment_term
     type: 'in_invoice'
     date_invoice: !eval time.strftime('%Y')+'-01-01'
     invoice_line:
@@ -166,7 +166,7 @@
       bank_journal_id = self.pool.get('account.journal').search(cr, uid, [('name', '=', 'Bank Bank Account (test)')])[0]
       bank_account_id = self.pool.get('account.journal').browse(cr, uid, bank_journal_id).default_debit_account_id.id
       fixed_asset_account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_fixed_assets'))])
-      equity_account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_equity')), ('tag_ids', 'in', [ref('demo_capital_account')])])
+      equity_account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_equity')), ('tag_ids', 'in', [ref('account.demo_capital_account')])])
       if bank_account_id and fixed_asset_account_ids and equity_account_ids:
           self._update(cr, uid, 'account.move.line', 'account', {
               'move_id': ref('account.demo_opening_move'),
