--- a/addons/account/demo/account_invoice_demo.yml
+++ b/addons/account/demo/account_invoice_demo.yml
@@ -163,8 +163,7 @@
       self._update(cr, uid, 'account.move', 'account', vals, 'demo_opening_move')
 -
   !python {model: ir.model.data} : |
-      bank_journal_id = self.pool.get('account.journal').search(cr, uid, [('name', '=', 'Bank Bank Account (test)')])[0]
-      bank_account_id = self.pool.get('account.journal').browse(cr, uid, bank_journal_id).default_debit_account_id.id
+      bank_account_id = self.pool.get('account.journal').browse(cr, uid, ref('account.bank_journal')).default_debit_account_id.id
       fixed_asset_account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_fixed_assets'))])
       equity_account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_equity')), ('tag_ids', 'in', [ref('account.demo_capital_account')])])
       if bank_account_id and fixed_asset_account_ids and equity_account_ids:
