[FIX] hr_timesheet_invoice : fixed tests

--- a/addons/hr_timesheet_invoice/test/test_hr_timesheet_invoice_no_prod_tax.yml
+++ b/addons/hr_timesheet_invoice/test/test_hr_timesheet_invoice_no_prod_tax.yml
@@ -6,7 +6,7 @@
   !record {model: account.analytic.line, id: account_analytic_line_developyamlforhrmodule1 }:
     account_id: analytic.analytic_agrolait
     amount: -1.0
-    general_account_id: account.a_expense
+    general_account_id: a_expense
     journal_id: hr_timesheet.analytic_journal
     name: develop yaml for hr module
     product_id: product.product_product_consultant
