--- a/addons/purchase/test/fifo_price.yml
+++ b/addons/purchase/test/fifo_price.yml
@@ -12,8 +12,8 @@
     uom_po_id: product.product_uom_kgm
     cost_method: real
     valuation: real_time
-    property_stock_account_input: account.o_expense
-    property_stock_account_output: account.o_income
+    property_stock_account_input: o_expense
+    property_stock_account_output: o_income
     description: FIFO Ice Cream can be mass-produced and thus is widely available in developed parts of the world. Ice cream can be purchased in large cartons (vats and squrounds) from supermarkets and grocery stores, in smaller quantities from ice cream shops, convenience stores, and milk bars, and in individual servings from small carts or vans at public events.
 - 
   I create a draft Purchase Order for first in move for 10 kg at 50 euro
@@ -241,7 +241,7 @@
     location_dest_id: stock.stock_location_customers
     picking_type_id: stock.picking_type_out
 - 
-  I assign this outgoing shipment 
+  I assign this outgoing shipment
 - 
   !python {model: stock.picking}: |
     self.action_assign(cr, uid, [ref("outgoing_fifo_shipment_ret")])
@@ -272,8 +272,8 @@
     uom_po_id: product.product_uom_kgm
     cost_method: real
     valuation: real_time
-    property_stock_account_input: account.o_expense
-    property_stock_account_output: account.o_income
+    property_stock_account_input: o_expense
+    property_stock_account_output: o_income
     description: 
 - 
   Create outpicking.  We create delivery order of 100 kg.
@@ -356,7 +356,7 @@
 
     assert self.browse(cr, uid, ref("product_fifo_negative")).standard_price == 70, 'The product price should not have been updated'
 - 
-  Receive purchase order with 60 kg FIFO Ice Cream at 80 euro/kg   
+  Receive purchase order with 60 kg FIFO Ice Cream at 80 euro/kg
 - 
   !record {model: purchase.order, id: purchase_order_fifo_neg2}:
     partner_id: base.res_partner_3
@@ -379,7 +379,7 @@
     picking_obj = self.pool.get('purchase.order').browse(cr, uid, ref("purchase_order_fifo_neg2"), context=context).picking_ids[0]
     picking_obj.do_transfer()
 - 
-  The price of the product should have changed back to 65.0 
+  The price of the product should have changed back to 65.0
 - 
   !python {model: product.product}: |
     assert self.browse(cr, uid, ref("product_fifo_negative")).standard_price == 65.0, "Product price not updated accordingly. %s found instead of 65" %(self.browse(cr, uid, ref("product_fifo_negative")).standard_price,)
