--- a/addons/hr_timesheet/hr_timesheet_demo.yml
+++ b/addons/hr_timesheet/hr_timesheet_demo.yml
@@ -2,6 +2,7 @@
     Creating demo data that require looking for accounts
 -
     !python {model: ir.model.data} : |
+        import time
         expense_account_id = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_expenses'))])
         if expense_account_id:
             vals = {
