[FIX] stock_landed_costs : fix tests | Also moved test/stock_valuation_account.xml to stock_account since it's used in many modules

--- a/addons/stock_account/stock_account_demo.yml
+++ b/addons/stock_account/stock_account_demo.yml
@@ -10,7 +10,7 @@
           vals = {
               'name': 'property_stock_valuation_account_id',
               'fields_id': fields_id,
-              'value': 'account.account,'+str(ref('account.stk')),
+              'value': 'account.account,'+str(account_id[0]),
               'company_id': ref('base.main_company'),
           }
           self._update(cr, uid, 'ir.property', 'stock_account', vals, 'property_stock_valuation_account_id')
