--- a/addons/account/demo/account_invoice_demo.yml
+++ b/addons/account/demo/account_invoice_demo.yml
@@ -147,7 +147,7 @@
 -
   !python {model: account.bank.statement.line} : |
       account_ids = self.pool.get('account.account').search(cr, uid, [('user_type', '=', ref('account.data_account_type_revenue')), ('tag_ids', 'in', [ref('account.account_tag_financing')])])
-      line = self.browse(cr, uid, ref('demo_bank_statement_line_5'))
+      line = self.browse(cr, uid, ref('account.demo_bank_statement_line_5'))
       if not line.journal_entry_ids and account_ids:
           line.write({'account_id': account_ids[0]})
           line.fast_counterpart_creation()
